home - 홈 탭 ui 구성 및 데이터 보여주기 - 홈 탭 이미지뷰 코너 설정 - 상품 상세보기 뷰페이저 적용 - 상품 및 유저 정보 보여주기

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="app_carrot">#E78111</color>
     <color name="app_white">#FFFFFF</color>
     <color name="app_black">#000000</color>
+    <color name="app_gray">#DDDDDD</color>
 
 </resources>
