--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -16,14 +16,22 @@
         android:background="?attr/selectableItemBackground"
         android:padding="@dimen/side_padding">
 
-        <ImageView
-            android:id="@+id/itemIv"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_background"
+            app:cardCornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/itemIv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_launcher_background" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/titleTv"
@@ -33,8 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/side_padding"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/itemIv"
-            app:layout_constraintTop_toTopOf="@+id/itemIv" />
+            app:layout_constraintStart_toEndOf="@+id/cardView"
+            app:layout_constraintTop_toTopOf="@+id/cardView" />
 
         <TextView
             android:id="@+id/neighborTv"
@@ -45,7 +53,7 @@
             android:layout_marginStart="@dimen/side_padding"
             android:layout_marginTop="3dp"
             android:text="동네명"
-            app:layout_constraintStart_toEndOf="@+id/itemIv"
+            app:layout_constraintStart_toEndOf="@+id/cardView"
             app:layout_constraintTop_toBottomOf="@+id/titleTv" />
 
         <TextView
@@ -76,7 +84,7 @@
             android:layout_marginStart="@dimen/side_padding"
             android:layout_marginTop="3dp"
             android:text="15000원"
-            app:layout_constraintStart_toEndOf="@+id/itemIv"
+            app:layout_constraintStart_toEndOf="@+id/cardView"
             app:layout_constraintTop_toBottomOf="@+id/neighborTv" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
