--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,13 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+
         <!-- Customize your theme here. -->
+        <!-- enable window content transitions -->
+        <!-- 액티비티 전환 시 이미지 이동 애니메이션 사용 -->
+        <item name="android:windowActivityTransitions">true</item>
+
     </style>
 
 
