--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,26 +4,26 @@
     <item
         android:id="@+id/page1"
         android:enabled="true"
-        android:icon="@drawable/ic_tab_1"
+        android:icon="@drawable/selector_tab_1"
         android:title="홈" />
     <item
         android:id="@+id/page2"
         android:enabled="true"
-        android:icon="@drawable/ic_tab_2"
+        android:icon="@drawable/selector_tab_2"
         android:title="동네생활" />
     <item
         android:id="@+id/page3"
         android:enabled="true"
-        android:icon="@drawable/ic_tab_3"
+        android:icon="@drawable/selector_tab_3"
         android:title="내 근처" />
     <item
         android:id="@+id/page4"
         android:enabled="true"
-        android:icon="@drawable/ic_tab_4"
+        android:icon="@drawable/selector_tab_4"
         android:title="채팅" />
     <item
         android:id="@+id/page5"
         android:enabled="true"
-        android:icon="@drawable/ic_tab_5"
+        android:icon="@drawable/selector_tab_5"
         android:title="나의 당근" />
 </menu>
