--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -3,6 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <import type="com.jw.cloneappcarrot.feature.Command" />
+
+        <variable
+            name="viewModel"
+            type="com.jw.cloneappcarrot.feature.splash.StartViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +22,7 @@
             style="@style/FontTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="당근마켓"
+            android:text="@string/app_name"
             android:textColor="@color/app_carrot"
             android:textSize="50dp"
             android:textStyle="bold"
