--- a/app/src/main/res/drawable/ic_like.xml
+++ b/app/src/main/res/drawable/ic_like.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="48"
+    android:viewportHeight="48">
   <path
-      android:pathData="M16.5,3c-1.74,0 -3.41,0.81 -4.5,2.09C10.91,3.81 9.24,3 7.5,3 4.42,3 2,5.42 2,8.5c0,3.78 3.4,6.86 8.55,11.54L12,21.35l1.45,-1.32C18.6,15.36 22,12.28 22,8.5 22,5.42 19.58,3 16.5,3zM12.1,18.55l-0.1,0.1 -0.1,-0.1C7.14,14.24 4,11.39 4,8.5 4,6.5 5.5,5 7.5,5c1.54,0 3.04,0.99 3.57,2.36h1.87C13.46,5.99 14.96,5 16.5,5c2,0 3.5,1.5 3.5,3.5 0,2.89 -3.14,5.74 -7.9,10.05z"
-      android:fillColor="#000000"/>
+      android:fillColor="#FF000000"
+      android:pathData="M24,41.95 L21.95,40.1Q13.8,32.65 8.9,27.1Q4,21.55 4,15.85Q4,11.35 7.025,8.325Q10.05,5.3 14.5,5.3Q17.05,5.3 19.55,6.525Q22.05,7.75 24,10.55Q26.2,7.75 28.55,6.525Q30.9,5.3 33.5,5.3Q37.95,5.3 40.975,8.325Q44,11.35 44,15.85Q44,21.55 39.1,27.1Q34.2,32.65 26.05,40.1ZM24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15ZM24,38Q31.6,31 36.3,25.85Q41,20.7 41,15.85Q41,12.55 38.875,10.425Q36.75,8.3 33.5,8.3Q31,8.3 28.8,9.85Q26.6,11.4 25.2,14.3H22.75Q21.4,11.4 19.175,9.85Q16.95,8.3 14.5,8.3Q11.2,8.3 9.1,10.425Q7,12.55 7,15.85Q7,20.7 11.7,25.85Q16.4,31 24,38Z"/>
 </vector>
