--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -109,9 +109,10 @@
 
             <ImageView
                 android:id="@+id/chatIv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_tab_4"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="2dp"
+                android:src="@drawable/ic_reply"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/chatCountTv" />
 
@@ -121,15 +122,18 @@
                 home_chat="@{model.chat}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:text="2"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="@+id/chatIv"
                 app:layout_constraintEnd_toStartOf="@+id/likeIv"
                 app:layout_constraintTop_toTopOf="@+id/chatIv" />
 
             <ImageView
                 android:id="@+id/likeIv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="2dp"
                 android:src="@drawable/ic_like"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/likeCountTv" />
@@ -141,6 +145,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="@+id/likeIv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/likeIv" />
