[add] 동네생활 타입 구분 추가, 타입 별 리스트 화면 기본 생성

--- a/app/src/main/res/layout/fragment_neighbor.xml
+++ b/app/src/main/res/layout/fragment_neighbor.xml
@@ -87,12 +87,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/typeRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/titleLayout" />
+
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titleLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/typeRecyclerView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
