--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -50,7 +50,7 @@
         <TextView
             android:id="@+id/titleTv"
             style="@style/FontTv"
-            home_title="@{model.title}"
+            string="@{model.title}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/side_padding"
@@ -61,7 +61,7 @@
         <TextView
             android:id="@+id/neighborTv"
             style="@style/FontTv"
-            home_neighbor="@{model.neighbor}"
+            string="@{model.neighbor}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/side_padding"
@@ -82,7 +82,7 @@
         <TextView
             android:id="@+id/timeTv"
             style="@style/FontTv"
-            home_time="@{model.time}"
+            string="@{model.time}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="시간"
@@ -92,7 +92,7 @@
 
         <TextView
             style="@style/FontTv"
-            home_price="@{model.price}"
+            string="@{model.price}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/side_padding"
@@ -119,7 +119,7 @@
             <TextView
                 android:id="@+id/chatCountTv"
                 style="@style/FontTv"
-                home_chat="@{model.chat}"
+                string="@{model.chat}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
@@ -141,7 +141,7 @@
             <TextView
                 android:id="@+id/likeCountTv"
                 style="@style/FontTv"
-                home_life="@{model.like}"
+                string="@{model.like}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
